--- a/WgWall/ClientApp/package.json
+++ b/WgWall/ClientApp/package.json
@@ -13,24 +13,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.9",
-    "@angular/common": "^6.1.9",
-    "@angular/compiler": "^6.1.9",
-    "@angular/core": "^6.1.9",
-    "@angular/forms": "^6.1.9",
-    "@angular/http": "^6.1.9",
-    "@angular/platform-browser": "^6.1.9",
-    "@angular/platform-browser-dynamic": "^6.1.9",
-    "@angular/platform-server": "^6.1.9",
-    "@angular/router": "^6.1.9",
+    "@angular/animations": "^6.1.10",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/platform-server": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "@fortawesome/angular-fontawesome": "^0.2.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.5",
-    "@fortawesome/free-solid-svg-icons": "^5.4.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@nguniversal/module-map-ngfactory-loader": "^6.1.0",
     "ajv": "^6.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.1",
     "core-js": "^2.5.7",
+    "cryptiles": "^4.1.2",
+    "hoek": "^5.0.4",
     "jquery": "^3.3",
     "popper.js": "^1.14",
     "rxjs": "^6.3.3",
@@ -38,13 +40,13 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "^6.2.4",
-    "@angular/compiler-cli": "^6.1",
-    "@angular/language-service": "^6.1.9",
+    "@angular-devkit/build-angular": "^0.8.5",
+    "@angular/cli": "^6.2.5",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
     "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "^2.0.5",
-    "@types/node": "^10.11.4",
+    "@types/node": "^10.11.7",
     "codelyzer": "^4.5.0",
     "jasmine-core": "~3.2.1",
     "jasmine-spec-reporter": "~4.2.1",
